--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "jest"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "keywords": [],
   "author": "codebyhim",
@@ -25,11 +25,13 @@
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/express-rate-limit": "^6.0.2",
+    "@types/jest": "^30.0.0",
     "@types/node": "^25.0.9",
     "jest": "^30.2.0",
     "mysql2": "^3.16.1",
     "nodemon": "^3.1.11",
     "sequelize": "^6.37.7",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
