--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     // Environment Settings
     "module": "nodenext",
     "target": "esnext",
-    "types": ["node"],
+    "types": ["node", "jest"],
     "moduleResolution": "nodenext",
 
     // For nodejs:
