--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       retries: 10
     restart: always
     env_file:
-      - .env.local
+      - .env
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_DATABASE_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE_NAME}
@@ -23,7 +23,7 @@ services:
     build: .
     container_name: blogging_platform_api_container
     env_file:
-      - .env.local
+      - .env
     ports:
       - "${PORT}:${PORT}"
     depends_on:
